--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -12,9 +12,14 @@
 {% block body%}
 <section id="summary">
   <h2>{{ post.title }}</h2>
+  <div>
+    {% for tag in post_tags %}
+    <span class="tag">{{ tag.caption }}</span>
+    {% endfor %}
+  </div>
   <article>
-    <img src="{% static 'blog/images/'|add:post.image %}" alt="Post Title" />
-    <address>{{ post.author }}</address>
+    <img src="{% static 'blog/images/'|add:post.image_name %}" alt="Post Title" />
+    <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
     <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
   </article>
 </section>
